Bug - CreateComplexMap: Immutable Object is modified Bug - Parameters.BPM was not set when Map was loaded Random Pattern: Removed BPM loading config - plot-nps-distribution config - fixInconsistentTimingsFasterThan config - fixInconsistentTimings